--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -36,14 +36,6 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="SendGrid, Version=9.8.0.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
-      <HintPath>..\packages\Sendgrid.9.9.0\lib\net452\SendGrid.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -58,15 +50,18 @@
     <Compile Include="AppContext.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Mappings\AccountMap.cs" />
-    <Compile Include="Mappings\AssociationMap.cs" />
     <Compile Include="Mappings\ErrorLogMap.cs" />
     <Compile Include="Mappings\FacilityMap.cs" />
     <Compile Include="Mappings\ResourcesMap.cs" />
     <Compile Include="Mappings\RoleMap.cs" />
     <Compile Include="Mappings\UsersMap.cs" />
-    <Compile Include="Migrations\201804070114262_Test.cs" />
-    <Compile Include="Migrations\201804070114262_Test.Designer.cs">
-      <DependentUpon>201804070114262_Test.cs</DependentUpon>
+    <Compile Include="Migrations\201803252331378_Shehzad.cs" />
+    <Compile Include="Migrations\201803252331378_Shehzad.Designer.cs">
+      <DependentUpon>201803252331378_Shehzad.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803260137082_HarshFacilityName.cs" />
+    <Compile Include="Migrations\201803260137082_HarshFacilityName.Designer.cs">
+      <DependentUpon>201803260137082_HarshFacilityName.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -83,8 +78,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201804070114262_Test.resx">
-      <DependentUpon>201804070114262_Test.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201803252331378_Shehzad.resx">
+      <DependentUpon>201803252331378_Shehzad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803260137082_HarshFacilityName.resx">
+      <DependentUpon>201803260137082_HarshFacilityName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
